finished customer, working on cart

--- a/eShop_Assignment/eShop Assignment/eShop/Views/Shipper/Add.cshtml
+++ b/eShop_Assignment/eShop Assignment/eShop/Views/Shipper/Add.cshtml
@@ -31,9 +31,9 @@
     </style>
 </head>
 <body>
-<h2>Add Product</h2>
-<form id="productForm" asp-action="Add" asp-controller="Shipper">
-    <label for="Name">Product Name:</label>
+<h2>Add Shipper</h2>
+<form id="shipperForm" asp-action="Add" asp-controller="Shipper">
+    <label for="Name">Shipper Name:</label>
     <input type="text" id="Name" asp-for="Name" name="Name">
     <span asp-validation-for="Name" class="text-danger"></span>
 
