--- a/eShop_Assignment/eShop Assignment/eShop/Views/Shipper/Index.cshtml
+++ b/eShop_Assignment/eShop Assignment/eShop/Views/Shipper/Index.cshtml
@@ -23,8 +23,8 @@
 
 <table>
     <tr>
-        <th>Product Id</th>
-        <th>Product Name</th>
+        <th>Shipper Id</th>
+        <th>Shipper Name</th>
         <th>Contact</th>
         <th></th>
     </tr>
@@ -41,7 +41,6 @@
     }
 
 </table>
-@* <a asp-action="Add" asp-controller="Product">Add Product</a> *@
-@* <a href="/Product/AddProduct">Add Product</a> *@
+
 <button class="add-button" onclick="location.href='@Url.Action("Add", "Shipper")'">Add Shipper</button>
 </body>
