--- a/eShop_Assignment/eShop Assignment/eShop/Views/Customer/Index.cshtml
+++ b/eShop_Assignment/eShop Assignment/eShop/Views/Customer/Index.cshtml
@@ -1,12 +1,20 @@
-@model IEnumerable<Customer>
-<h5>@ViewBag.Title</h5>
-@{
-    <div style="display:flex; flex-direction:row;">
-        @foreach (var m in Model)
-        {
-            <partial name="_displayCard" model="@m"></partial>
+@* @model IEnumerable<Customer> *@
+@* <h5>@ViewBag.Title</h5> *@
+@* @{ *@
+@*     <div style="display:flex; flex-direction:row;"> *@
+@*         @foreach (var m in Model) *@
+@*         { *@
+@*             <partial name="_displayCard" model="@m"></partial> *@
+@*         } *@
+@*     </div> *@
+@*      *@
+@* } *@
+@model Customer
+<h1>Please enter your user id</h1>
 
-        }
-    </div>
-    
-}
+<form asp-action="Index" asp-controller="Customer">
+    <label for="">User Id</label>
+    <input type="text" name="id" />
+    <input type="submit" value="Login">
+</form>
+
