--- a/eShop_Assignment/eShop Assignment/eShop/Views/Shared/_Layout.cshtml
+++ b/eShop_Assignment/eShop Assignment/eShop/Views/Shared/_Layout.cshtml
@@ -32,10 +32,24 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
                     </li>
                     <li class="nav-item">
-                                            <a class="nav-link text-dark" asp-area="" asp-controller="Shipper" asp-action="Index">Shipper</a>
-                                            </li>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Shipper" asp-action="Index">Shipper</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Promotion" asp-action="Index">Promotion</a>
+                    </li>
                 </ul>
+                <div class="justify-content-end px-0">
+                    <a asp-area="" asp-controller="ShoppingCart" asp-action="Index">
+                        <img width="50px" height="50px" src="https://media.istockphoto.com/id/1206806317/vector/shopping-cart-icon-isolated-on-white-background.jpg?s=2048x2048&w=is&k=20&c=Z3Qy1_NQNpXKAYgfmbgSJrNFqRzUrzY-5kUtGTkf29Q="/>
+                    </a>
+                </div>
+                <div class="justify-content-end px-5">
+                    <a asp-area="" asp-controller="Customer" asp-action="Index">
+                        <img width="40px" height="40px" src="https://banner2.cleanpng.com/20180622/tqt/kisspng-computer-icons-user-clip-art-consignee-5b2d25107181a2.1674732415296852644649.jpg"/>
+                    </a>
+                </div>
             </div>
+            
         </div>
     </nav>
 </header>
