--- a/eShop_Assignment/eShop Assignment/eShop/Views/Shipper/Edit.cshtml
+++ b/eShop_Assignment/eShop Assignment/eShop/Views/Shipper/Edit.cshtml
@@ -1,6 +1,6 @@
 @model Shipper
 
-<h1>Edit Product</h1>
+<h1>Edit Shipper Info</h1>
 <form asp-action="Edit" asp-controller="Shipper">
     <div>
         <input type="hidden" value="@Model.Id"/>
@@ -8,7 +8,7 @@
         <input type="text" name="Name" value="@Model.Name" class="form-control"/>
     </div>
     <div>
-        <label>Price</label>
+        <label>Contact Number</label>
         <input type="text" name="ContactNumber" value="@Model.ContactNumber" class="form-control"/>
     </div>
     <button type="submit" class="btn-primary btn">Update</button>
